--- a/package.json
+++ b/package.json
@@ -38,10 +38,10 @@
         "@babel/plugin-proposal-class-properties": "^7.18.6",
         "@babel/plugin-proposal-optional-chaining": "^7.21.0",
         "@babel/plugin-transform-modules-commonjs": "^7.21.2",
-        "@babel/plugin-transform-runtime": "^7.21.0",
-        "@babel/preset-env": "^7.20.2",
         "@babel/plugin-transform-react-jsx": "^7.21.0",
+        "@babel/plugin-transform-runtime": "^7.21.0",
         "@babel/plugin-transform-typescript": "^7.16.1",
+        "@babel/preset-env": "^7.20.2",
         "@babel/preset-react": "^7.18.6",
         "@babel/preset-typescript": "^7.16.0",
         "@typescript-eslint/eslint-plugin": "^5.14.0",
@@ -58,5 +58,13 @@
         "prettier": "^2.5.1",
         "typescript": "^5.0.2"
     },
-    "homepage": "https://github.com/C5H8NNaO4/leap-backend#readme"
+    "homepage": "https://github.com/C5H8NNaO4/leap-backend#readme",
+    "dependencies": {
+        "@state-less/react-server": "^2.0.42",
+        "date-fns": "^3.3.1",
+        "uuid": "^9.0.1"
+    },
+    "peerDependencies": {
+        "@state-less/react-server": "^2.0.42"
+    }
 }
