--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "A collection of open source fullstack services",
     "main": "dist/index.js",
     "scripts": {
-        "build": "babel -x \".ts\" -x \".tsx\" -x \".js\" ./src --out-dir ./dist",
+        "build": "babel -x \".ts\" -x \".tsx\" -x \".js\" ./src --out-dir ./dist && tsc",
         "postinstall": "npm run build",
         "start": "yarn build && node dist/index.js",
         "test": "jest --coverage"
